# Regression-Analysis-Mobile-Application-

./: README.md  pyproject.toml  requirements.txt
app/: main.py  model_utils.py  schemas.py
app/models/: README.txt  best_model_random_forest.pkl  feature_names.pkl
stunting_predictor/: README.md  pubspec.yaml
stunting_predictor/android/app/: build.gradle.kts
stunting_predictor/android/app/src/main/: AndroidManifest.xml
stunting_predictor/ios/Runner/: Info.plist
stunting_predictor/ios/Runner.xcodeproj/: project.pbxproj
stunting_predictor/linux/: CMakeLists.txt
stunting_predictor/linux/runner/: my_application.cc
stunting_predictor/macos/Runner.xcodeproj/: project.pbxproj
stunting_predictor/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
stunting_predictor/macos/Runner/Configs/: AppInfo.xcconfig
stunting_predictor/test/: widget_test.dart
stunting_predictor/web/: index.html  manifest.json
stunting_predictor/windows/: CMakeLists.txt
stunting_predictor/windows/runner/: Runner.rc  main.cpp
summative/API/: prediction.py  requirements.txt  scaler.pkl
summative/FlutterApp/: pubspec.yaml
summative/FlutterApp/.dart_tool/: package_config.json  package_graph.json
summative/FlutterApp/.dart_tool/chrome-device/Default/: BrowsingTopicsState  DIPS  History  Preferences  Secure Preferences  Top Sites  Web Data
summative/FlutterApp/.dart_tool/chrome-device/Default/GCM Store/: LOG
summative/FlutterApp/.dart_tool/extension_discovery/: vs_code.json
summative/FlutterApp/lib/: main.dart
summative/linear_regression/: multivariate.ipynb
(+19 files in other folders)
